Fixed small alignment errors

--- a/src/containers/chat/index.css
+++ b/src/containers/chat/index.css
@@ -9,11 +9,12 @@
 	height: 80%;
 	padding: 20px;
 	padding-top: 0px;
+	padding-right: 0px;
 	position: absolute;
 	bottom: 0;
 	left: 0;
 	margin-bottom: 12%;
-	width: 100%;
+	width: 98%;
 
 }
 .input-container{
